Add blank ionic starter project

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,12 @@
     "tests"
   ],
   "dependencies": {
+    "angular": "~1.4.7",
+    "ionic": "driftyco/ionic-bower#~1.1.1",
+    "bower": "*",
+    "install": "~1.0.4"
+  },
+  "resolutions": {
     "angular": "~1.4.7"
   }
 }
