--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "del": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.1.0",
