Add ngCordova module

--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7",
     "ionic": "driftyco/ionic-bower#~1.1.1",
     "bower": "*",
-    "install": "~1.0.4"
+    "install": "~1.0.4",
+    "ngCordova": "~0.1.23-alpha"
   },
   "resolutions": {
     "angular": "~1.4.7"
