--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "devDependencies": {
     "browser-sync": "^2.10.0",
     "del": "^2.1.0",
+    "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-remember": "^0.3.0",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
