--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "ionic": "driftyco/ionic-bower#~1.1.1",
     "bower": "*",
-    "ngCordova": "~0.1.23-alpha"
+    "ngCordova": "~0.1.23-alpha",
+    "peerjs": "~0.3.14"
   },
   "resolutions": {
     "angular": "~1.4.7"
