--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "minimist": "^1.2.0"
   }
 }
