--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "ionic": "driftyco/ionic-bower#~1.1.1",
     "bower": "*",
     "ngCordova": "~0.1.23-alpha",
-    "peerjs": "~0.3.14"
+    "peerjs": "~0.3.14",
+    "lodash": "~3.10.1"
   },
   "resolutions": {
     "angular": "~1.4.7"
