--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-remember": "^0.3.0",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
