--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "cordova-plugin-device",
     "ionic-plugin-keyboard",
     "cordova-plugin-statusbar",
-    "cordova-plugin-contacts"
+    "cordova-plugin-contacts",
+    {
+      "locator": "https://github.com/joshbatchelor/cordova-plugin-local-notifications",
+      "id": "de.appplant.cordova.plugin.local-notification"
+    }
   ],
   "cordovaPlatforms": [
     "android"
