Add phone device plugin to package.json

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     {
       "locator": "https://github.com/joshbatchelor/cordova-plugin-local-notifications",
       "id": "de.appplant.cordova.plugin.local-notification"
-    }
+    },
+    "org.apache.cordova.device"
   ],
   "cordovaPlatforms": [
     "android"
