--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "peerjs": "~0.3.14",
     "lodash": "~3.10.1",
     "ngstorage": "~0.3.10",
-    "fabric.js": "fabric#~1.5.0"
+    "fabric.js": "fabric#~1.5.0",
+    "angular-translate": "~2.8.1",
+    "angular-translate-loader-static-files": "~2.8.1"
   },
   "resolutions": {
     "angular": "~1.4.7"
