--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-translate": "~2.8.1",
     "angular-translate-loader-static-files": "~2.8.1",
     "socket.io": "https://github.com/socketio/socket.io-client/blob/master/socket.io.js",
-    "socket.io-client": "git@github.com:socketio/socket.io-client.git#6580a7f9b50be02c70efe308f7d80501c8d6379b"
+    "socket.io-client": "git@github.com:socketio/socket.io-client.git#6580a7f9b50be02c70efe308f7d80501c8d6379b",
+    "rollbar": "~1.8.1"
   },
   "resolutions": {
     "angular": "~1.4.7"
