--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "android"
   ],
   "devDependencies": {
+    "beepbeep": "^1.2.0",
     "browser-sync": "^2.10.0",
     "del": "^2.1.0",
     "gulp-cached": "^1.1.0",
@@ -42,6 +43,8 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
