Update SOAR -> SoAR in some more places

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "sardroid",
+  "name": "SoAR",
   "description": "New and improved version of SAR",
   "main": "index.js",
   "authors": [
