--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Soar!",
+  "name": "SoAR",
   "version": "0.0.1",
   "description": "New and improved version of SAR",
   "main": "index.js",
