--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
+    "gulp-replace-task": "^0.11.0",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
