--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "angular-translate-loader-static-files": "~2.8.1",
     "socket.io": "https://github.com/socketio/socket.io-client/blob/master/socket.io.js",
     "socket.io-client": "https://github.com/socketio/socket.io-client.git#6580a7f9b50be02c70efe308f7d80501c8d6379b",
-    "rollbar": "~1.8.1"
+    "rollbar": "~1.8.1",
+    "international-phone-number": "~0.0.16",
+    "jquery": "^2.2.0"
   },
   "resolutions": {
     "angular": "~1.4.7"
