--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/melonmanchan/sardroid#readme",
   "cordovaPlugins": [
-    "cordova-plugin-crosswalk-webview",
     "cordova-plugin-device",
     "ionic-plugin-keyboard",
     "cordova-plugin-statusbar",
@@ -26,7 +25,8 @@
       "locator": "https://github.com/joshbatchelor/cordova-plugin-local-notifications",
       "id": "de.appplant.cordova.plugin.local-notification"
     },
-    "org.apache.cordova.device"
+    "org.apache.cordova.device",
+    "cordova-plugin-google-analytics"
   ],
   "cordovaPlatforms": [
     "android"
