--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "xml2js": "0.4.16"
   }
 }
