--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "beepbeep": "^1.2.0",
     "browser-sync": "^2.10.0",
     "del": "^2.1.0",
+    "eslint": "2.3.0",
+    "eslint-config-airbnb": "6.1.0",
+    "eslint-plugin-angular": "1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-eslint": "2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
