--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "del": "^2.1.0",
     "eslint": "2.3.0",
     "eslint-config-airbnb": "6.1.0",
+    "eslint-config-angular": "0.5.0",
     "eslint-plugin-angular": "1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
