Refactor contacts factory

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
     },
     "globals": {
         "cordova": true,
+        "_": true,
+        "ContactField": true,
         "Promise": true
     },
     "rules": {
