--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     },
     "globals": {
         "cordova": true,
+        "fabric": true,
         "_": true,
         "ContactField": true,
         "Promise": true
@@ -17,6 +18,7 @@
         "indent":  [2, 4],
         "max-len": [2, 120, 4],
         "func-names": 0,
+        "default-case": 0,
         "no-param-reassign": 0,
         "no-multi-spaces": 0,
         "no-console": 0,
