--- a/.eslintrc
+++ b/.eslintrc
@@ -9,11 +9,11 @@
     },
     "globals": {
         "ContactField": true,
-        "Promise": true
+        "Promise": true,
         "_": true,
         "cordova": true,
         "fabric": true,
-        "io": true,
+        "io": true
     },
     "rules": {
         "indent":  [2, 4],
