Nearly finish cleaning up peerhandler

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     },
     "globals": {
         "ContactField": true,
+        "Peer": true,
         "Promise": true,
         "_": true,
         "cordova": true,
