--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
         "padded-blocks": 0,
         "key-spacing": 0,
         "angular/controller-as-route": 0,
+        "angular/controller-as": 0,
         "angular/controller-name": 0
     }
 }
