--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,8 @@
         "key-spacing": 0,
         "angular/controller-as-route": 0,
         "angular/controller-as": 0,
-        "angular/controller-name": 0
+        "angular/controller-name": 0,
+        "angular/interval-service": 0,
+        "angular/on-watch": 0
     }
 }
