--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "globals": {
         "ContactField": true,
         "Peer": true,
+        "Draggabilly": true,
         "Promise": true,
         "_": true,
         "cordova": true,
