Change to native audio plugin

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     {
       "locator": "https://github.com/katzer/cordova-plugin-local-notifications.git",
       "id": "de.appplant.cordova.plugin.local-notification"
+    },
+    {
+      "locator": "https://github.com/SidneyS/cordova-plugin-nativeaudio.git",
+      "id": "cordova-plugin-nativeaudio"
     }
   ],
   "cordovaPlatforms": [
