Some eslint fixes, save video remote audio also

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     },
     "globals": {
         "ContactField": true,
+        "RecordRTC": true,
         "Peer": true,
         "Draggabilly": true,
         "Promise": true,
