Add intlTelInputUtils to .eslintrc globals

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "Peer": true,
         "Draggabilly": true,
         "Promise": true,
+        "intlTelInputUtils": true,
         "_": true,
         "cordova": true,
         "fabric": true,
