--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "rollbar": "~1.8.1",
     "jquery": "^2.2.0",
     "draggabilly": "^2.1.0",
-    "recordrtc": "^5.3.0"
+    "recordrtc": "^5.3.0",
+    "whammy": "antimatter15/whammy"
   },
   "resolutions": {
     "angular": "~1.4.7"
